# miniTextRPG

./: CMakeLists.txt  main.cpp  miniTextRPG.cbp  miniTextRPG.depend  miniTextRPG.layout
include/: Action.hpp  Armor.hpp  Character.hpp  CombatPlayer.hpp  Display.hpp  EnemyCharacter.hpp  Equipment.hpp  Inventory.hpp  PlayerCharacter.hpp  Random.hpp  Spell.hpp  SpellDictionnary.hpp  Weapon.hpp  combat.hpp
src/: Action.cpp  Armor.cpp  Character.cpp  Combat.cpp  CombatPlayer.cpp  Display.cpp  EnemyCharacter.cpp  Equipment.cpp  Inventory.cpp  PlayerCharacter.cpp  Random.cpp  Spell.cpp  Weapon.cpp
